final fixes pt 1

--- a/views/layouts/eventLandingPage.ejs
+++ b/views/layouts/eventLandingPage.ejs
@@ -21,15 +21,12 @@
 
   <link rel="stylesheet" href="/css/custom-new.css">
   <link href="/css/styles.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- Font Awesome Icons -->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
-
   <!-- Animate Styles CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
@@ -70,7 +67,7 @@
                 <span class="toggler-icon"></span>
               </button>
               <div
-                class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+                class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
                 id="navbarOne">
                 <ul id="nav"
                   class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
@@ -89,11 +86,10 @@
                 </ul>
               </div>
               <div class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
-                <a class="scroll-page inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
-                  data-scroll-nav="0" href="#internship">Join Us</a>
+                <a class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
+                  data-scroll-nav="0" href="#EventRegisterationForm" rel="nofollow">Join</a>
               </div>
             </nav>
-
           </div>
         </div>
       </div>
@@ -128,53 +124,36 @@
               </div>
             </div>
           </div>
-          <div class="slider-body -mt-32 wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.2s">
-
-            <div class="slider-container">
-
-              <div class="slider-content">
-
-                <div class="slider-single">
-                  <img class="slider-single-image rounded-lg mx-auto block" src="https://picsum.photos/id/973/200/300" alt="1" />
-                </div>
-
-                <div class="slider-single">
-                  <img class="slider-single-image rounded-lg mx-auto block" src="https://picsum.photos/id/974/200/300" alt="2" />
-                </div>
-
-                <div class="slider-single">
-                  <img class="slider-single-image rounded-lg mx-auto block" src="https://picsum.photos/id/975/200/300" alt="3" />
-                </div>
-
-
-                <div class="slider-single">
-                  <img class="slider-single-image rounded-lg mx-auto block" src="https://picsum.photos/id/976/200/300" alt="4" />
-                </div>
-
-
-                <div class="slider-single">
-                  <img class="slider-single-image rounded-lg mx-auto block" src="https://picsum.photos/id/977/200/300" alt="5" />
-                </div>
-
-                <div class="slider-single">
-                  <img class="slider-single-image rounded-lg mx-auto block" src="https://picsum.photos/id/978/200/300" alt="6" />
-                </div>
-              </div>
-            </div>
+          <div class="slider-body -mt-44">
+            <i class="slider-container">
+              <input class="slider-content" type="radio" name="s"
+                style="background-image: url('https://source.unsplash.com/random/700x720');" title="Random Picture 2">
+              <input class="slider-content" type="radio" name="s"
+                style="background-image: url('https://source.unsplash.com/random/700x720');" title="Random Picture 1"
+                checked>
+              <input class="slider-content" type="radio" name="s"
+                style="background-image: url('https://source.unsplash.com/random/700x720');" title="Random Picture 3">
+              <input class="slider-content" type="radio" name="s"
+                style="background-image: url('https://source.unsplash.com/random/700x720');" title="Random Picture 4">
+              <input class="slider-content" type="radio" name="s"
+                style="background-image: url('https://source.unsplash.com/random/700x720');" title="Random Picture 5">
+            </i>
           </div>
+
         </div>
-        <div id="particles-1" class="particles"></div>
       </div>
+      <div id="particles-1" class="particles"></div>
+    </div>
   </header>
 
   <!-- Event Description Section -->
-  <section id="aboutEvent" class="pt-44 video-counter">
+  <section id="aboutEvent" class="pt-36 video-counter">
     <div class="container">
       <div class="row">
         <div class="w-full lg:w-1/2">
           <div class="relative pb-8 mt-12 video-content wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
-            <img class="absolute bottom-0 left-0 -ml-8 dots" src="/img/dots.svg" alt="dots">
-            <div class="relative mr-6 rounded-lg shadow-md video-wrapper">
+            <img class="absolute bottom-0 left-0 -ml-6 dots" src="/img/dots.svg" alt="dots">
+            <div class="relative mr-5 flex justify-center rounded-lg shadow-md video-wrapper">
               <div class="video-image">
                 <img class="rounded" src="/img/hero-steve.jpg" alt="video">
               </div>
@@ -183,7 +162,11 @@
         </div>
         <div class="w-full lg:w-1/2 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
           <div class="flex flex-col justify-center">
-            <h1 class="text-4xl text-black font-bold text-center">Event Name</h1>
+            <div class="mb-4 section-title">
+              <div class="mx-auto mt-4 line"></div>
+              <h1 class="text-4xl text-black font-bold text-center">Event Name</h1>
+            </div>
+
             <p class="mt-3 text-justify text-xl text-black">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Doloremque aspernatur obcaecati error enim eligendi,
@@ -210,10 +193,12 @@
     </div>
     </div>
   </section>
+
   <!-- timeline -->
   <section id="timeline" class="my-10 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
     <div class="flex flex-col justify-center">
-      <div class="line-divider">
+      <div class="mb-4 section-title">
+        <div class="mx-auto line"></div>
         <h1 class="text-4xl font-bold text-center">Workflow</h1>
       </div>
       <ul class="timeline">
@@ -225,7 +210,8 @@
               <span class="flag ml-2">Event Starts.</span>
               <span class="time-wrapper"><span class="time">27 July 18:00</span></span>
             </div>
-            <div class="desc">Lorem ipsum Nisi labore aute do aute culpa magna nulla voluptate exercitation deserunt
+            <div class="px-4 pb-4">Lorem ipsum Nisi labore aute do aute culpa magna nulla voluptate exercitation
+              deserunt
               proident.</div>
           </div>
         </li>
@@ -285,15 +271,14 @@
   </section>
 
   <!-- organizers -->
-
   <div id="organizers" class="flex justify-center items-center wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
     <div id="team_members" class="mt-10">
       <div class="flex flex-col">
-        <div class="line-divider">
+        <div class="mb-4 section-title">
+          <div class="mx-auto line"></div>
           <h1 class="text-3xl text-center text-black my-2">Event organizers</h1>
         </div>
-        <div class="mt-4 mx-10 grid gap-8 lg:grid-cols-3 sm:grid-cols-1 md:grid-cols-1">
-          <!-- green border color is for team members -->
+        <div class="mt-4 mx-5 grid gap-8 lg:grid-cols-3 sm:grid-cols-1 md:grid-cols-1">
           <div data-aos="fade-up"
             class="max-w-sm layered-card bg-white duration-200 border-2 border-transparent hover:border-green-600">
             <div class="team-item">
@@ -397,7 +382,6 @@
       </div>
     </div>
   </div>
-
   <!-- Footer Section -->
   <footer class="relative mt-10 z-10 footer-area pt-2">
     <div class="footer-bg" style="background-image: url(/img/footer-bg.svg);"></div>
@@ -567,264 +551,6 @@
   <script src="/js/particles.min.js"></script>
 
   <script src="/js/main.js"></script>
-
-  <script>
-    $('.owl-carousel').owlCarousel({
-      loop: true,
-      margin: 10,
-      nav: false,
-      autoplay: true,
-      autoplaytime: 500,
-      dots: false,
-      responsive: {
-        0: {
-          items: 1
-        },
-        600: {
-          items: 2
-        },
-        1000: {
-          items: 3
-        }
-      }
-    });
-
-    AOS.init();
-    AOS.init({
-      once: true,
-    });
-  </script>
-
-  <script>
-
-    const repeat = false;
-    const noArrows = false;
-    const noBullets = false;
-
-
-    const container = document.querySelector('.slider-container');
-    var slide = document.querySelectorAll('.slider-single');
-    var slideTotal = slide.length - 1;
-    var slideCurrent = -1;
-
-    function initBullets() {
-      if (noBullets) {
-        return;
-      }
-      const bulletContainer = document.createElement('div');
-      bulletContainer.classList.add('bullet-container')
-      slide.forEach((elem, i) => {
-        const bullet = document.createElement('div');
-        bullet.classList.add('bullet')
-        bullet.id = `bullet-index-${i}`
-        bullet.addEventListener('click', () => {
-          goToIndexSlide(i);
-        })
-        bulletContainer.appendChild(bullet);
-        elem.classList.add('proactivede');
-      })
-      container.appendChild(bulletContainer);
-    }
-
-    function initArrows() {
-      if (noArrows) {
-        return;
-      }
-      const leftArrow = document.createElement('a')
-      const iLeft = document.createElement('i');
-      iLeft.classList.add('fa')
-      iLeft.classList.add('fa-arrow-left')
-      iLeft.classList.add('fa-2x')
-      leftArrow.classList.add('slider-left')
-      leftArrow.appendChild(iLeft)
-      leftArrow.addEventListener('click', () => {
-        slideLeft();
-      })
-      const rightArrow = document.createElement('a')
-      const iRight = document.createElement('i');
-      iRight.classList.add('fa')
-      iRight.classList.add('fa-arrow-right')
-      iRight.classList.add('fa-2x')
-      rightArrow.classList.add('slider-right')
-      rightArrow.appendChild(iRight)
-      rightArrow.addEventListener('click', () => {
-        slideRight();
-      })
-      container.appendChild(leftArrow);
-      container.appendChild(rightArrow);
-    }
-
-    function slideInitial() {
-      initBullets();
-      initArrows();
-      setTimeout(function () {
-        slideRight();
-      }, 500);
-    }
-
-    function updateBullet() {
-      if (!noBullets) {
-        document.querySelector('.bullet-container').querySelectorAll('.bullet').forEach((elem, i) => {
-          elem.classList.remove('active');
-          if (i === slideCurrent) {
-            elem.classList.add('active');
-          }
-        })
-      }
-      checkRepeat();
-    }
-
-    function checkRepeat() {
-      if (!repeat) {
-        if (slideCurrent === slide.length - 1) {
-          slide[0].classList.add('not-visible');
-          slide[slide.length - 1].classList.remove('not-visible');
-          if (!noArrows) {
-            document.querySelector('.slider-right').classList.add('not-visible')
-            document.querySelector('.slider-left').classList.remove('not-visible')
-          }
-        }
-        else if (slideCurrent === 0) {
-          slide[slide.length - 1].classList.add('not-visible');
-          slide[0].classList.remove('not-visible');
-          if (!noArrows) {
-            document.querySelector('.slider-left').classList.add('not-visible')
-            document.querySelector('.slider-right').classList.remove('not-visible')
-          }
-        } else {
-          slide[slide.length - 1].classList.remove('not-visible');
-          slide[0].classList.remove('not-visible');
-          if (!noArrows) {
-            document.querySelector('.slider-left').classList.remove('not-visible')
-            document.querySelector('.slider-right').classList.remove('not-visible')
-          }
-        }
-      }
-    }
-
-    function slideRight() {
-      if (slideCurrent < slideTotal) {
-        slideCurrent++;
-      } else {
-        slideCurrent = 0;
-      }
-
-      if (slideCurrent > 0) {
-        var preactiveSlide = slide[slideCurrent - 1];
-      } else {
-        var preactiveSlide = slide[slideTotal];
-      }
-      var activeSlide = slide[slideCurrent];
-      if (slideCurrent < slideTotal) {
-        var proactiveSlide = slide[slideCurrent + 1];
-      } else {
-        var proactiveSlide = slide[0];
-
-      }
-
-      slide.forEach((elem) => {
-        var thisSlide = elem;
-        if (thisSlide.classList.contains('preactivede')) {
-          thisSlide.classList.remove('preactivede');
-          thisSlide.classList.remove('preactive');
-          thisSlide.classList.remove('active');
-          thisSlide.classList.remove('proactive');
-          thisSlide.classList.add('proactivede');
-        }
-        if (thisSlide.classList.contains('preactive')) {
-          thisSlide.classList.remove('preactive');
-          thisSlide.classList.remove('active');
-          thisSlide.classList.remove('proactive');
-          thisSlide.classList.remove('proactivede');
-          thisSlide.classList.add('preactivede');
-        }
-      });
-      preactiveSlide.classList.remove('preactivede');
-      preactiveSlide.classList.remove('active');
-      preactiveSlide.classList.remove('proactive');
-      preactiveSlide.classList.remove('proactivede');
-      preactiveSlide.classList.add('preactive');
-
-      activeSlide.classList.remove('preactivede');
-      activeSlide.classList.remove('preactive');
-      activeSlide.classList.remove('proactive');
-      activeSlide.classList.remove('proactivede');
-      activeSlide.classList.add('active');
-
-      proactiveSlide.classList.remove('preactivede');
-      proactiveSlide.classList.remove('preactive');
-      proactiveSlide.classList.remove('active');
-      proactiveSlide.classList.remove('proactivede');
-      proactiveSlide.classList.add('proactive');
-
-      updateBullet();
-    }
-
-    function slideLeft() {
-      if (slideCurrent > 0) {
-        slideCurrent--;
-      } else {
-        slideCurrent = slideTotal;
-      }
-
-      if (slideCurrent < slideTotal) {
-        var proactiveSlide = slide[slideCurrent + 1];
-      } else {
-        var proactiveSlide = slide[0];
-      }
-      var activeSlide = slide[slideCurrent];
-      if (slideCurrent > 0) {
-        var preactiveSlide = slide[slideCurrent - 1];
-      } else {
-        var preactiveSlide = slide[slideTotal];
-      }
-      slide.forEach((elem) => {
-        var thisSlide = elem;
-        if (thisSlide.classList.contains('proactive')) {
-          thisSlide.classList.remove('preactivede');
-          thisSlide.classList.remove('preactive');
-          thisSlide.classList.remove('active');
-          thisSlide.classList.remove('proactive');
-          thisSlide.classList.add('proactivede');
-        }
-        if (thisSlide.classList.contains('proactivede')) {
-          thisSlide.classList.remove('preactive');
-          thisSlide.classList.remove('active');
-          thisSlide.classList.remove('proactive');
-          thisSlide.classList.remove('proactivede');
-          thisSlide.classList.add('preactivede');
-        }
-      });
-
-      preactiveSlide.classList.remove('preactivede');
-      preactiveSlide.classList.remove('active');
-      preactiveSlide.classList.remove('proactive');
-      preactiveSlide.classList.remove('proactivede');
-      preactiveSlide.classList.add('preactive');
-
-      activeSlide.classList.remove('preactivede');
-      activeSlide.classList.remove('preactive');
-      activeSlide.classList.remove('proactive');
-      activeSlide.classList.remove('proactivede');
-      activeSlide.classList.add('active');
-
-      proactiveSlide.classList.remove('preactivede');
-      proactiveSlide.classList.remove('preactive');
-      proactiveSlide.classList.remove('active');
-      proactiveSlide.classList.remove('proactivede');
-      proactiveSlide.classList.add('proactive');
-
-      updateBullet();
-    }
-
-    function goToIndexSlide(index) {
-      const sliding = (slideCurrent > index) ? () => slideRight() : () => slideLeft();
-      while (slideCurrent !== index) {
-        sliding();
-      }
-    }
-
-    slideInitial();</script>
 
 </body>
 
