--- a/views/layouts/home-new.ejs
+++ b/views/layouts/home-new.ejs
@@ -130,14 +130,22 @@
               </div>
             </div>
           </div>
-          <div class="justify-center row z-50">
-            <div class="w-full lg:w-2/3">
-              <div class="text-center header-hero-image wow fadeIn" data-wow-duration="1.3s" data-wow-delay="1.4s">
-                <img class="rounded-lg" src="/img/hero-steve.jpg" alt="hero">
-              </div>
-            </div>
+          <div class="slider-body -mt-40">
+            <i class="slider-container">
+              <input class="slider-content" type="radio" name="s"
+                style="background-image: url('https://source.unsplash.com/random/700x720');" title="Random Picture 2">
+              <input class="slider-content" type="radio" name="s"
+                style="background-image: url('https://source.unsplash.com/random/700x720');" title="Random Picture 1"
+                checked>
+              <input class="slider-content" type="radio" name="s"
+                style="background-image: url('https://source.unsplash.com/random/700x720');" title="Random Picture 3">
+              <input class="slider-content" type="radio" name="s"
+                style="background-image: url('https://source.unsplash.com/random/700x720');" title="Random Picture 4">
+              <input class="slider-content" type="radio" name="s"
+                style="background-image: url('https://source.unsplash.com/random/700x720');" title="Random Picture 5">
+            </i>
           </div>
-        </div>
+s        </div>
       </div>
       <!-- Particle.js Effect -->
       <div id="particles-1" class="particles"></div>
