Carousels added to all pages and bug fixes pt 2

--- a/views/layouts/home/departments_page.ejs
+++ b/views/layouts/home/departments_page.ejs
@@ -7,9 +7,8 @@
 </head>
 
 <body>
-  <!-- Navbar without header -->
-  <%- include("./sections/navbar.ejs") %>
-  <!-- Navbar without header -->
+  <!-- header + navbar -->
+  <%- include("./sections/header-nav.ejs") %> 
 
   <!-- All Departments -->
   <%- include("./sections/all-departments.ejs") %> 
