--- a/views/layouts/home/sections/event-organizers.ejs
+++ b/views/layouts/home/sections/event-organizers.ejs
@@ -1,10 +1,11 @@
 <div id="organizers" class="flex justify-center items-center wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
     <div id="team_members" class="mt-10">
       <div class="flex flex-col">
-        <div class="line-divider">
-          <h1 class="text-3xl text-center text-black my-2">Event organizers</h1>
+        <div class="mb-4 section-title">
+          <div class="mx-auto line"></div>
+          <h1 class="text-4xl font-bold text-center">Workflow</h1>
         </div>
-        <div class="mt-4 mx-10 grid gap-8 lg:grid-cols-3 sm:grid-cols-1 md:grid-cols-1">
+          <div class="mt-4 mx-10 grid gap-8 lg:grid-cols-3 sm:grid-cols-1 md:grid-cols-1">
           <!-- green border color is for team members -->
           <div data-aos="fade-up"
             class="max-w-sm layered-card bg-white duration-200 border-2 border-transparent hover:border-green-600">
