--- a/views/layouts/home/sections/all-departments.ejs
+++ b/views/layouts/home/sections/all-departments.ejs
@@ -10,9 +10,8 @@ data-wow-delay="0.5s">
 <div class="mt-20 mx-10">
   <div class="flex justify-center flex-col">
     <div
-      class="flex 2xl:space-x-10 xl:space-x-10 lg:space-x-10 justify-between xl:flex-row 2xl:flex-row lg:flex-row md:flex-col flex-col">
-      <!-- grid gap-8 lg:grid-cols-2 sm:grid-cols-1 md:grid-cols-1 -->
-      <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 duration-200 hover:border-red-600 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+      class="flex 2xl:space-x-10 xl:space-x-10 lg:space-x-10 justify-center xl:justify-between 2xl:justify-between  xl:flex-row 2xl:flex-row lg:flex-row flex-col">
+      <div class="w-auto mb-2 bg-white border-2 border-transparent lg:w-1/3 2xl:w-1/3 xl:w-1/3 md:w-2/3 sm:w-2/3 mt-5 hover:border-red-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
         <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
         <div class="flex flex-col px-4 pt-3">
           <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
@@ -48,7 +47,7 @@ data-wow-delay="0.5s">
           </div>
         </div>
       </div>
-      <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-green-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
+      <div class="w-auto mb-2 bg-white border-2 border-transparent lg:w-1/3 2xl:w-1/3 xl:w-1/3 md:w-2/3 sm:w-2/3 mt-5 hover:border-green-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
         <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
         <div class="flex flex-col px-4 pt-3">
           <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
@@ -84,118 +83,7 @@ data-wow-delay="0.5s">
           </div>
         </div>
       </div>
-      <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-blue-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
-        <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
-        <div class="flex flex-col px-4 pt-3">
-          <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
-          <p class="text-black text-center"><i class="fa fa-quote-left pt-4" aria-hidden="true"></i>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Ipsa placeat hic est dicta debitis sed, quas a aperiam
-            quos culpa voluptatum vero eos architecto facere
-            praesentium neque rerum nam possimus! (tagline)</p>
-          <hr class="border-gray-600 mb-2 mt-1 opacity-20">
-          <div class="flex flex-row justify-between">
-            <h1 class="text-gray-600 font-medium pt-1 justify-start">Head Name</h1>
-            <ul class="flex space-x-2 text-2xl">
-              <li>
-                <a href="#">
-                  <i class="duration-200 hover:text-blue-800 fab fa-facebook"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fab fa-instagram duration-200 hover:text-red-600"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fab fa-linkedin duration-200 hover:text-purple-700"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="flex justify-center items-center">
-            <a href="/department-create-101" class="inline w-1/2 text-lg text-white  text-center duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2 my-5  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
-              data-scroll-nav="0" href="#" rel="nofollow">Visit Department</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div
-      class="flex 2xl:space-x-10 xl:space-x-10 lg:space-x-10 justify-between xl:flex-row 2xl:flex-row lg:flex-row md:flex-col flex-col">
-      <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-yellow-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-        <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
-        <div class="flex flex-col px-4 pt-3">
-          <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
-          <p class="text-black text-center"><i class="fa fa-quote-left pt-4" aria-hidden="true"></i>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Ipsa placeat hic est dicta debitis sed, quas a aperiam
-            quos culpa voluptatum vero eos architecto facere
-            praesentium neque rerum nam possimus! (tagline)</p>
-          <hr class="border-gray-600 mb-2 mt-1 opacity-20">
-          <div class="flex flex-row justify-between">
-            <h1 class="text-gray-600 font-medium pt-1 justify-start">Head Name</h1>
-            <ul class="flex space-x-2 text-2xl">
-              <li>
-                <a href="#">
-                  <i class="duration-200 hover:text-blue-800 fab fa-facebook"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fab fa-instagram duration-200 hover:text-red-600"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fab fa-linkedin duration-200 hover:text-purple-700"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="flex justify-center items-center">
-            <a href="/department-create-101" class="inline w-1/2 text-lg text-white  text-center duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2 my-5  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
-              data-scroll-nav="0" href="#" rel="nofollow">Visit Department</a>
-          </div>
-        </div>
-      </div>
-      <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-indigo-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
-        <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
-        <div class="flex flex-col px-4 pt-3">
-          <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
-          <p class="text-black text-center"><i class="fa fa-quote-left pt-4" aria-hidden="true"></i>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Ipsa placeat hic est dicta debitis sed, quas a aperiam
-            quos culpa voluptatum vero eos architecto facere
-            praesentium neque rerum nam possimus! (tagline)</p>
-          <hr class="border-gray-600 mb-2 mt-1 opacity-20">
-          <div class="flex flex-row justify-between">
-            <h1 class="text-gray-600 font-medium pt-1 justify-start">Head Name</h1>
-            <ul class="flex space-x-2 text-2xl">
-              <li>
-                <a href="#">
-                  <i class="duration-200 hover:text-blue-800 fab fa-facebook"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fab fa-instagram duration-200 hover:text-red-600"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fab fa-linkedin duration-200 hover:text-purple-700"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="flex justify-center items-center">
-            <a href="/department-create-101" class="inline w-1/2 text-lg text-white  text-center duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2 my-5  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
-              data-scroll-nav="0" href="#" rel="nofollow">Visit Department</a>
-          </div>
-        </div>
-      </div>
-      <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-purple-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
+      <div class="w-auto mb-2 bg-white border-2 border-transparent lg:w-1/3 2xl:w-1/3 xl:w-1/3 md:w-2/3 sm:w-2/3 mt-5 hover:border-blue-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
         <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
         <div class="flex flex-col px-4 pt-3">
           <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
@@ -233,8 +121,8 @@ data-wow-delay="0.5s">
       </div>
     </div>
     <div
-      class="flex 2xl:space-x-10 xl:space-x-10 lg:space-x-10 justify-between xl:flex-row 2xl:flex-row lg:flex-row md:flex-col flex-col">
-      <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-pink-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+      class="flex 2xl:space-x-10 xl:space-x-10 lg:space-x-10 justify-center xl:justify-between 2xl:justify-between xl:flex-row 2xl:flex-row lg:flex-row flex-col">
+      <div class="w-auto mb-2 bg-white border-2 border-transparent lg:w-1/3 2xl:w-1/3 xl:w-1/3 md:w-2/3 sm:w-2/3 mt-5 hover:border-yellow-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
         <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
         <div class="flex flex-col px-4 pt-3">
           <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
@@ -270,7 +158,7 @@ data-wow-delay="0.5s">
           </div>
         </div>
       </div>
-      <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-red-300 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
+      <div class="w-auto mb-2 bg-white border-2 border-transparent lg:w-1/3 2xl:w-1/3 xl:w-1/3 md:w-2/3 sm:w-2/3 mt-5 hover:border-indigo-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
         <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
         <div class="flex flex-col px-4 pt-3">
           <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
@@ -306,7 +194,118 @@ data-wow-delay="0.5s">
           </div>
         </div>
       </div>
-      <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-blue-500 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
+      <div class="w-auto mb-2 bg-white border-2 border-transparent lg:w-1/3 2xl:w-1/3 xl:w-1/3 md:w-2/3 sm:w-2/3 mt-5 hover:border-purple-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
+        <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
+        <div class="flex flex-col px-4 pt-3">
+          <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
+          <p class="text-black text-center"><i class="fa fa-quote-left pt-4" aria-hidden="true"></i>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Ipsa placeat hic est dicta debitis sed, quas a aperiam
+            quos culpa voluptatum vero eos architecto facere
+            praesentium neque rerum nam possimus! (tagline)</p>
+          <hr class="border-gray-600 mb-2 mt-1 opacity-20">
+          <div class="flex flex-row justify-between">
+            <h1 class="text-gray-600 font-medium pt-1 justify-start">Head Name</h1>
+            <ul class="flex space-x-2 text-2xl">
+              <li>
+                <a href="#">
+                  <i class="duration-200 hover:text-blue-800 fab fa-facebook"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fab fa-instagram duration-200 hover:text-red-600"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fab fa-linkedin duration-200 hover:text-purple-700"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="flex justify-center items-center">
+            <a href="/department-create-101" class="inline w-1/2 text-lg text-white  text-center duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2 my-5  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
+              data-scroll-nav="0" href="#" rel="nofollow">Visit Department</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="flex 2xl:space-x-10 xl:space-x-10 lg:space-x-10 justify-center xl:justify-between 2xl:justify-between xl:flex-row 2xl:flex-row lg:flex-row flex-col">
+      <div class="w-auto mb-2 bg-white border-2 border-transparent lg:w-1/3 2xl:w-1/3 xl:w-1/3 md:w-2/3 sm:w-2/3 mt-5 hover:border-pink-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+        <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
+        <div class="flex flex-col px-4 pt-3">
+          <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
+          <p class="text-black text-center"><i class="fa fa-quote-left pt-4" aria-hidden="true"></i>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Ipsa placeat hic est dicta debitis sed, quas a aperiam
+            quos culpa voluptatum vero eos architecto facere
+            praesentium neque rerum nam possimus! (tagline)</p>
+          <hr class="border-gray-600 mb-2 mt-1 opacity-20">
+          <div class="flex flex-row justify-between">
+            <h1 class="text-gray-600 font-medium pt-1 justify-start">Head Name</h1>
+            <ul class="flex space-x-2 text-2xl">
+              <li>
+                <a href="#">
+                  <i class="duration-200 hover:text-blue-800 fab fa-facebook"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fab fa-instagram duration-200 hover:text-red-600"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fab fa-linkedin duration-200 hover:text-purple-700"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="flex justify-center items-center">
+            <a href="/department-create-101" class="inline w-1/2 text-lg text-white  text-center duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2 my-5  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
+              data-scroll-nav="0" href="#" rel="nofollow">Visit Department</a>
+          </div>
+        </div>
+      </div>
+      <div class="w-auto mb-2 bg-white border-2 border-transparent lg:w-1/3 2xl:w-1/3 xl:w-1/3 md:w-2/3 sm:w-2/3 mt-5 hover:border-red-300 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
+        <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
+        <div class="flex flex-col px-4 pt-3">
+          <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
+          <p class="text-black text-center"><i class="fa fa-quote-left pt-4" aria-hidden="true"></i>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Ipsa placeat hic est dicta debitis sed, quas a aperiam
+            quos culpa voluptatum vero eos architecto facere
+            praesentium neque rerum nam possimus! (tagline)</p>
+          <hr class="border-gray-600 mb-2 mt-1 opacity-20">
+          <div class="flex flex-row justify-between">
+            <h1 class="text-gray-600 font-medium pt-1 justify-start">Head Name</h1>
+            <ul class="flex space-x-2 text-2xl">
+              <li>
+                <a href="#">
+                  <i class="duration-200 hover:text-blue-800 fab fa-facebook"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fab fa-instagram duration-200 hover:text-red-600"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fab fa-linkedin duration-200 hover:text-purple-700"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="flex justify-center items-center">
+            <a href="/department-create-101" class="inline w-1/2 text-lg text-white  text-center duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2 my-5  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
+              data-scroll-nav="0" href="#" rel="nofollow">Visit Department</a>
+          </div>
+        </div>
+      </div>
+      <div class="w-auto mb-2 bg-white border-2 border-transparent lg:w-1/3 2xl:w-1/3 xl:w-1/3 md:w-2/3 sm:w-2/3 mt-5 hover:border-blue-500 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
         <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
         <div class="flex flex-col px-4 pt-3">
           <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
