--- a/views/layouts/home/sections/event-description.ejs
+++ b/views/layouts/home/sections/event-description.ejs
@@ -14,8 +14,11 @@
         </div>
         <div class="w-full lg:w-1/2 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
           <div class="flex flex-col justify-center">
-            <h1 class="text-4xl text-black font-bold text-center">Event Name</h1>
-            <p class="mt-3 text-justify text-xl text-black">
+            <div class="mb-4 section-title">
+              <div class="mx-auto line"></div>
+              <h1 class="text-4xl font-bold text-center">Event Name</h1>
+            </div>
+                  <p class="mt-3 text-justify text-xl text-black">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Doloremque aspernatur obcaecati error enim eligendi,
               molestiae necessitatibus possimus placeat cumque delectus
