--- a/views/layouts/home/sections/event-timeline.ejs
+++ b/views/layouts/home/sections/event-timeline.ejs
@@ -1,6 +1,7 @@
 <section id="timeline" class="my-10 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
     <div class="flex flex-col justify-center">
-      <div class="line-divider">
+      <div class="mb-4 section-title">
+        <div class="mx-auto line"></div>
         <h1 class="text-4xl font-bold text-center">Workflow</h1>
       </div>
       <ul class="timeline">
@@ -12,7 +13,7 @@
               <span class="flag ml-2">Event Starts.</span>
               <span class="time-wrapper"><span class="time">27 July 18:00</span></span>
             </div>
-            <div class="desc">Lorem ipsum Nisi labore aute do aute culpa magna nulla voluptate exercitation deserunt
+            <div class="px-4 pb-4">Lorem ipsum Nisi labore aute do aute culpa magna nulla voluptate exercitation deserunt
               proident.</div>
           </div>
         </li>
