--- a/views/layouts/home/event-page.ejs
+++ b/views/layouts/home/event-page.ejs
@@ -17,9 +17,9 @@
   <footer id="footer" class="relative z-10 footer-area pt-2">
     <div class="footer-bg" style="background-image: url(/img/footer-bg.svg);"></div>
     <div class="container">
-      <!-- Newsletter Section -->
+      <!-- Event suggestion form Section -->
       <%- include("./sections/suggest-event.ejs") %> 
-      <!-- Newsletter Section -->
+      <!-- Event suggestion form Section -->
       
       <!-- Footer Links -->
       <%- include("./sections/footer-links.ejs") %> 
