1. Event participantion form working 2. Internship form wokring 3. Event and Department pages dynamically rendered 4. Basic styling fixes 5. Still AJAX required for all forms

--- a/views/layouts/home/departments_page.ejs
+++ b/views/layouts/home/departments_page.ejs
@@ -1,6 +1,6 @@
 <!-- department page which has all 9 departments -->
 <!doctype html>
-<html lang="en">
+<html lang="en"> 
 
 <head>
   <%- include("./partials/head-links.ejs") %> 
@@ -19,7 +19,7 @@
     <div class="footer-bg" style="background-image: url(/img/footer-bg.svg);"></div>
     <div class="container">
       <!-- Newsletter Section -->
-      <%- include("./sections/internship-form.ejs") %> 
+      <%- include("./sections/magazine-form.ejs") %> 
       <!-- Newsletter Section -->
       
       <!-- Footer Links -->
