--- a/views/layouts/home/event-page.ejs
+++ b/views/layouts/home/event-page.ejs
@@ -5,9 +5,8 @@
 </head>
 
 <body class="bg-white">
-  <!-- Navbar & Hero -->
-  <%- include("./sections/navbar-hero.ejs") %>
-  <!-- Navbar & Hero -->
+  <!-- header + navbar -->
+  <%- include("./sections/header-nav.ejs") %>
 
   <!-- All Events Type -->
   <%- include("./sections/collective-events.ejs") %> 
