--- a/views/layouts/home/partials/head-links.ejs
+++ b/views/layouts/home/partials/head-links.ejs
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 
-<title>E-Cell | GNDEC</title>
+<title><%= title %> </title>
 <meta name="description" content="">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
