--- a/views/layouts/home/sections/event-description.ejs
+++ b/views/layouts/home/sections/event-description.ejs
@@ -1,5 +1,5 @@
 <!-- Event Description Section -->
-<section id="aboutEvent" class="pt-44 video-counter">
+<section id="aboutEvent" class="pt-44 video-counter mb-24">
     <div class="container">
       <div class="row">
         <div class="w-full lg:w-1/2">
@@ -12,30 +12,19 @@
             </div>
           </div>
         </div>
-        <div class="w-full lg:w-1/2 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
-          <div class="flex flex-col justify-center">
+        <div class="w-full lg:w-1/2 wow fadeIn flex items-center" data-wow-duration="1s" data-wow-delay="0.5s">
+          <div class="flex flex-col justify-center px-4">
             <div class="mb-4 section-title">
-              <div class="mx-auto line"></div>
-              <h1 class="text-4xl font-bold text-center">Event Name</h1>
+              <div class="line"></div>
+              <h1 class="text-4xl font-bold"><%= foundEvent.name %></h1>
             </div>
-                  <p class="mt-3 text-justify text-xl text-black">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Doloremque aspernatur obcaecati error enim eligendi,
-              molestiae necessitatibus possimus placeat cumque delectus
-              sint impedit, suscipit iste veritatis aliquam fugiat quae
-              illo laboriosam?
+                  <p class="mt-3 text-justify text-lg text-black">
+              <%= foundEvent.description %> 
             </p>
-            <div class="flex flex-row space-x-2 text-lg text-black pt-2">
-              <img src="https://img.icons8.com/dusk/64/000000/calendar--v2.png" /><span class="pt-3">27th Nov.
+            <div class="flex flex-row items-center space-x-2 text-lg text-black pt-2">
+              <img class="h-10 w-10" src="https://img.icons8.com/dusk/64/000000/calendar--v2.png" /><span class="font-bold">27th Nov.
                 2021</span>
             </div>
-            <p class="mt-3 text-justify text-xl text-black">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Doloremque aspernatur obcaecati error enim eligendi,
-              molestiae necessitatibus possimus placeat cumque delectus
-              sint impedit, suscipit iste veritatis aliquam fugiat quae
-              illo laboriosam?
-            </p>
           </div>
         </div>
       </div>
