--- a/views/layouts/home/sections/event-timeline.ejs
+++ b/views/layouts/home/sections/event-timeline.ejs
@@ -10,8 +10,8 @@
           <div class="direction-r border-2 border-transparent hover:border-red-300">
             <div class="flag-wrapper mt-2 px-2 py-2">
               <span class="hexa"></span>
-              <span class="flag ml-2">Event Starts.</span>
-              <span class="time-wrapper"><span class="time">27 July 18:00</span></span>
+              <span class="flag ml-2">Registration Starts.</span>
+              <span class="time-wrapper"><span class="time"><%= moment(foundEvent.registration_starts).format("MMMM Do YYYY") %></span></span>
             </div>
             <div class="px-4 pb-4">Lorem ipsum Nisi labore aute do aute culpa magna nulla voluptate exercitation deserunt
               proident.</div>
@@ -24,7 +24,7 @@
             <div class="flag-wrapper mt-2 px-2 py-2">
               <span class="hexa"></span>
               <span class=" mr-2 flag">Registration Ends</span>
-              <span class="time-wrapper"><span class="time">27 July 18:00</span></span>
+              <span class="time-wrapper"><span class="time"><%= moment(foundEvent.registration_ends).format("MMMM Do YYYY") %></span></span>
             </div>
             <div class="px-4 pb-4">Lorem ipsum Nisi labore aute do aute culpa magna nulla voluptate exercitation
               deserunt proident.</div>
@@ -37,7 +37,7 @@
             <div class="flag-wrapper mt-2 px-2 py-2">
               <span class="hexa"></span>
               <span class=" ml-2 flag">Event Starts</span>
-              <span class="time-wrapper"><span class="time">27 July 18:00</span></span>
+              <span class="time-wrapper"><span class="time"><%= moment(foundEvent.event_starts).format("MMMM Do YYYY") %></span></span>
             </div>
             <div class="px-4 pb-4">Lorem ipsum Nisi labore aute do aute culpa magna nulla voluptate exercitation
               deserunt proident.</div>
@@ -49,7 +49,7 @@
             <div class="flag-wrapper mt-2 px-2 py-2">
               <span class="hexa"></span>
               <span class=" mr-2 flag">Event Ends</span>
-              <span class="time-wrapper"><span class="time">27 July 18:00</span></span>
+              <span class="time-wrapper"><span class="time"><%= moment(foundEvent.event_ends).format("MMMM Do YYYY") %></span></span>
             </div>
             <div class="px-4 pb-4">Lorem ipsum Nisi labore aute do aute culpa magna nulla voluptate exercitation
               deserunt proident.</div>
@@ -61,7 +61,7 @@
             <div class="flag-wrapper mt-2 px-2 py-2">
               <span class="hexa"></span>
               <span class=" ml-2 flag">Result Declaration</span>
-              <span class="time-wrapper"><span class="time">27 July 18:00</span></span>
+              <span class="time-wrapper"><span class="time"><%= moment(foundEvent.event_ends).format("MMMM Do YYYY") %></span></span>
             </div>
             <div class="px-4 pb-4">Lorem ipsum Nisi labore aute do aute culpa magna nulla voluptate exercitation
               deserunt proident.</div>
