--- a/views/layouts/home/sections/event-registration.ejs
+++ b/views/layouts/home/sections/event-registration.ejs
@@ -10,14 +10,14 @@
       </div>
     </div>
     <div class="w-full lg:w-1/2">
-      <div id="internship" class="mt-8 subscribe-form">
-        <form action="/newsletter-sub" method="POST" class="relativeb focus:outline-none space-y-5">
+      <div id="event-registration" class="mt-8 subscribe-form">
+        <form action="/events/<%= foundEvent.name %>" method="POST" class="relativeb focus:outline-none space-y-5">
           <input type="text"
             class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none"
-            id="user_name" placeholder="Your Name">
+            id="name" name="name" placeholder="Your Name">
           <input type="email" name="email" placeholder="Enter email"
             class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
-          <input type="email" name="college_name" placeholder="College Name"
+          <input type="text" name="college_name" placeholder="College Name"
             class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
           <input type="text" name="linkedin_account" placeholder="Your Linkedin Account Id"
             class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
