Monthly Magazine form working

--- a/views/layouts/home/sections/magazine-form.ejs
+++ b/views/layouts/home/sections/magazine-form.ejs
@@ -12,7 +12,7 @@ data-wow-duration="1s" data-wow-delay="0.5s">
   </div>
   <div class="w-full lg:w-1/2">
     <div class="mt-12 subscribe-form">
-      <form action="/newsletter-sub" method="POST" class="relative focus:outline-none">
+      <form action="/monthly-magazine" method="POST" class="relative focus:outline-none">
         <input type="email" name="email" placeholder="Enter email"
           class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
         <button
